# hdf5-to-lerobot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  convert.py  main.py  pyproject.toml
configs/: default.json
docs/: pipeline.md  quickstart.md
scripts/: convert.py  convert_to_v30.sh  download_dataset.py
scripts/lerobot_v033_v21/: compute_stats.py  convert_dataset_v20_to_v21.py  convert_stats.py  lerobot_dataset.py  utils.py
src/hdf5_to_lerobot/: __init__.py  __main__.py  cleaning.py  conversion.py  pipeline.py
