[project]
name = "postprocess-franka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "h5py>=3.15.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "scipy>=1.17.0",
    "tqdm>=4.67.3",
]
