[project]
name = "hdf5-to-lerobot"
version = "0.1.0"
description = "HDF5 to LeRobot Pipeline for Franka robot data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "h5py>=3.15.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "scipy>=1.17.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hdf5_to_lerobot"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[project.scripts]
hdf5-to-lerobot = "hdf5_to_lerobot.__main__:main"
